--- a/animation-activity/activity.css
+++ b/animation-activity/activity.css
@@ -28,16 +28,16 @@ nav {
 }
 
 @keyframes top {
-  from {}
-  to {}
+  from {transform: rotate(0);}
+  to {transform: translate(0em,2em) rotate(-45deg);}
 }
 
 @keyframes middle {
-  from {}
-  to {}
+  from {width: 100%;}
+  to {width: 0%;}
 }
 
 @keyframes bottom {
-  from {}
-  to {}
+  from {transform: rotate(0);}
+  to {transform: translate(0em, -2em) rotate(45deg);}
 }
